// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel css extract basic object support 1`] = `
"css({
  display: ['-webkit-box', '-ms-flexbox', 'flex']
});"
`;

exports[`babel css extract composes 1`] = `
"import './css.test.emotion.css';

const cls1 = \`\${'css-cls1-1q8jsgx'}\`;
const cls2 = css(['css-cls2-1fsihoz', ['one-class', 'another-class', cls1]], ['center']);"
`;

exports[`babel css extract composes 2`] = `
".css-cls1-1q8jsgx { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }
.css-cls2-1fsihoz {
          -webkit-justify-content: center;
          -ms-flex-pack: center;
          -webkit-box-pack: center;
          justify-content: center;
          -webkit-align-items: var(--css-cls2-1fsihoz-0);
          -ms-flex-align: var(--css-cls2-1fsihoz-0);
          -webkit-box-align: var(--css-cls2-1fsihoz-0);
          align-items: var(--css-cls2-1fsihoz-0) }"
`;

exports[`babel css extract composes no dynamic 1`] = `
"import './css.test.emotion.css';

const cls1 = \`\${'css-cls1-1q8jsgx'}\`;
const cls2 = \`\${'css-cls2-m25v9m'} \${'one-class'} \${'another-class'} \${cls1}\`;"
`;

exports[`babel css extract composes no dynamic 2`] = `
".css-cls1-1q8jsgx { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }
.css-cls2-m25v9m {
          -webkit-justify-content: center;
          -ms-flex-pack: center;
          -webkit-box-pack: center;
          justify-content: center;
          -webkit-align-items: center;
          -ms-flex-align: center;
          -webkit-box-align: center;
          align-items: center }"
`;

exports[`babel css extract composes with objects 1`] = `
"import './css.test.emotion.css';

const cls1 = css({
  display: ['-webkit-box', '-ms-flexbox', 'flex']
});
const cls2 = \`\${'css-cls2-k8jueb'} \${cls1}\`;"
`;

exports[`babel css extract composes with objects 2`] = `
".css-cls2-k8jueb {
          height: 20;
          -webkit-justify-content: center;
          -ms-flex-pack: center;
          -webkit-box-pack: center;
          justify-content: center; }"
`;

exports[`babel css extract css basic 1`] = `
"import \\"./css.test.emotion.css\\";

css([\\"css-cu78iu\\"], [widthVar]);"
`;

exports[`babel css extract css basic 2`] = `
".css-cu78iu { margin: 12px 48px;
        color: #ffffff;
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        -webkit-flex: 1 0 auto;
        -ms-flex: 1 0 auto;
        flex: 1 0 auto;
        color: blue;
        width: var(--css-cu78iu-0); }"
`;

exports[`babel css extract interpolation in selector 1`] = `
"
const cls2 = css([\\"css-cls2-16o34vq\\"], [className], function createEmotionRules(x0) {
  return [\`.css-cls2-16o34vq { margin: 12px 48px;
        color: #ffffff; }\`, \`.css-cls2-16o34vq .\${x0} { display: none; }\`];
});"
`;

exports[`babel css extract prefixed array of objects 1`] = `
"
css([{
  borderRadius: '50%',
  WebkitBoxSizing: 'border-box',
  boxSizing: 'border-box',
  display: ['-webkit-box', '-ms-flexbox', 'flex'],
  ':hover': {
    WebkitTransform: 'scale(1.2)',
    transform: 'scale(1.2)'
  }
}, {
  WebkitTransition: '-webkit-transform 400ms ease-in-out',
  transition: ['-webkit-transform 400ms ease-in-out', 'transform 400ms ease-in-out', 'transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out']
}]);"
`;

exports[`babel css extract prefixed objects 1`] = `
"
css({
    borderRadius: '50%',
    WebkitTransition: '-webkit-transform 400ms ease-in-out',
    transition: ['-webkit-transform 400ms ease-in-out', 'transform 400ms ease-in-out', 'transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out'],
    WebkitBoxSizing: 'border-box',
    boxSizing: 'border-box',
    display: ['-webkit-box', '-ms-flexbox', 'flex'],
    ':hover': {
        WebkitTransform: 'scale(1.2)',
        transform: 'scale(1.2)'
    }
});"
`;

exports[`babel css inline composes 1`] = `
"
const cls1 = css(['css-cls1-1q8jsgx'], [], function createEmotionRules() {
  return [\`.css-cls1-1q8jsgx { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }\`];
});
const cls2 = css(['css-cls2-v9djpl', 'one-class', 'another-class', cls1], ['center'], function createEmotionRules(x0) {
  return [\`.css-cls2-v9djpl {
          -webkit-justify-content: center;
          -ms-flex-pack: center;
          -webkit-box-pack: center;
          justify-content: center;
          -webkit-align-items: \${x0};
          -ms-flex-align: \${x0};
          -webkit-box-align: \${x0};
          align-items: \${x0} }\`];
});"
`;

exports[`babel css inline css basic 1`] = `
"
css([\\"css-cu78iu\\"], [widthVar], function createEmotionRules(x0) {
        return [\`.css-cu78iu { margin: 12px 48px;
        color: #ffffff;
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        -webkit-flex: 1 0 auto;
        -ms-flex: 1 0 auto;
        flex: 1 0 auto;
        color: blue;
        width: \${x0}; }\`];
});"
`;

exports[`babel css inline interpolation in selector 1`] = `
"
const cls2 = css([\\"css-cls2-16o34vq\\"], [className], function createEmotionRules(x0) {
  return [\`.css-cls2-16o34vq { margin: 12px 48px;
        color: #ffffff; }\`, \`.css-cls2-16o34vq .\${x0} { display: none; }\`];
});"
`;

exports[`babel css inline lots of composes 1`] = `
"
const cls2 = css(['css-cls2-hal2lb', 'one-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class', 'another-class'], ['center'], function createEmotionRules(x0) {
  return [\`.css-cls2-hal2lb {
          -webkit-justify-content: center;
          -ms-flex-pack: center;
          -webkit-box-pack: center;
          justify-content: center;
          -webkit-align-items: \${x0};
          -ms-flex-align: \${x0};
          -webkit-box-align: \${x0};
          align-items: \${x0} }\`];
});"
`;

exports[`babel css inline only composes 1`] = `
"
const cls1 = css(['css-cls1-1q8jsgx'], [], function createEmotionRules() {
  return [\`.css-cls1-1q8jsgx { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }\`];
});
const cls2 = css(['css-cls2-64ycl', 'one-class', 'another-class', cls1], []);"
`;

exports[`babel css inline only styles on nested selector 1`] = `
"
const cls1 = css([\\"css-cls1-1q8jsgx\\"], [], function createEmotionRules() {
  return [\`.css-cls1-1q8jsgx { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }\`];
});
const cls2 = css([\\"css-cls2-1nbi349\\"], [], function createEmotionRules() {
  return [\`.css-cls2-1nbi349:hover {
    background: pink;
}\`];
});"
`;

exports[`babel css inline throws correct error when composes is not the first rule 1`] = `"unknown: Error: composes must be the first rule"`;

exports[`babel css inline throws correct error when composes is on a nested selector 1`] = `"unknown: Error: composes cannot be on nested selectors"`;

exports[`babel css inline throws correct error when the value of composes is not an interpolation 1`] = `"unknown: Error: composes must be a interpolation"`;
